--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "typecheck": "vue-tsc -p ./tsconfig.app.json"
   },
   "dependencies": {
-    "@unhead/vue": "^1.11.19",
+    "@nuxt/ui-pro": "^3.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxt/ui-pro": "3.0.0-beta.3",
     "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.0",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.1",
     "vue-tsc": "^2.2.2"
   }
 }
